<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/signUpAc_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:src="@android:drawable/ic_dialog_info"></com.google.android.material.floatingactionbutton.FloatingActionButton>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/signUpAc_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:singleLine="true"
            android:maxLength="50"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"></EditText>
        <EditText
            android:id="@+id/signUpAc_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLength="50"
            android:singleLine="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"></EditText>
        <EditText
            android:id="@+id/signUpAc_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="50"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"></EditText>
        <EditText
            android:id="@+id/signUpAc_passwordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="50"
            android:hint="@string/passwordAgain"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"></EditText>
        <Button
            android:id="@+id/signUpAc_signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@color/colorAccent"></Button>
    </LinearLayout>

</RelativeLayout>